--- a/package.json
+++ b/package.json
@@ -49,13 +49,13 @@
     "three-stdlib": "^2.18.1"
   },
   "scripts": {
-    "dev": "next dev",
-    "build": "next build && next export -o build/",
+    "dev": "npm dev",
+    "build": "npm build && npm export -o build/",
     "build:storybook": "build-storybook -o build-storybook && node scripts/draco-storybook",
     "deploy": "aws s3 sync --delete build/ s3://hamish-portfolio-site",
     "deploy:storybook": "aws s3 sync --delete build-storybook s3://hamish-portfolio-storybook",
     "deploy:functions": "cd functions && npm run deploy",
-    "start": "next start",
+    "start": "npm start",
     "test": "echo 'write some tests'",
     "storybook": "start-storybook -p 9009 -h localhost"
   },
