--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "portfolio",
   "version": "1.0.0",
-  "homepage": "https://hamishw.com",
-  "description": "Portfolio site for Hamish Williams",
-  "repository": "https://github.com/HamishMW/portfolio.git",
-  "author": "Hamish Williams <hello@hamishw.com>",
+  "homepage": "https://connorlove.com",
+  "description": "Portfolio site for Connor Love",
+  "repository": "https://github.com/Coding-with-love/portfolio-master.git",
   "devDependencies": {
     "@mapbox/rehype-prism": "^0.8.0",
     "@storybook/addon-a11y": "^6.5.10",
