--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "portfolio",
   "version": "1.0.0",
-  "homepage": "https://hamishw.com",
-  "description": "Portfolio site for Hamish Williams",
-  "repository": "https://github.com/HamishMW/portfolio.git",
-  "author": "Hamish Williams <hello@hamishw.com>",
+  "homepage": "https://connorlove.com",
+  "description": "Portfolio site for Connor Love",
+  "repository": "https://github.com/Coding-with-love/portfolio-master.git",
   "devDependencies": {
     "@mapbox/rehype-prism": "^0.8.0",
     "@storybook/addon-a11y": "^6.5.10",
@@ -37,6 +36,7 @@
     "stylelint-config-standard": "^26.0.0"
   },
   "dependencies": {
+    "build": "^0.1.4",
     "framer-motion": "^7.1.0",
     "mdx-bundler": "^9.0.1",
     "next": "^12.2.5",
@@ -50,11 +50,12 @@
   },
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export -o build/",
+   "build": "next build", 
+
     "build:storybook": "build-storybook -o build-storybook && node scripts/draco-storybook",
     "deploy": "aws s3 sync --delete build/ s3://hamish-portfolio-site",
     "deploy:storybook": "aws s3 sync --delete build-storybook s3://hamish-portfolio-storybook",
-    "deploy:functions": "cd functions && npm run deploy",
+    "deploy:functions": "cd functions && next run deploy",
     "start": "next start",
     "test": "echo 'write some tests'",
     "storybook": "start-storybook -p 9009 -h localhost"
