--- a/package.json
+++ b/package.json
@@ -76,5 +76,10 @@
   "engines": {
     "npm": ">=8.6.0",
     "node": ">=18.0.0"
+  },
+  "extends": "next",
+  "rules": {
+    "react/no-unescaped-entities": "off",
+    "@next/next/no-page-custom-font": "off"
   }
 }
