--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_WEBSITE_URL=https://connorlove.com
-NEXT_PUBLIC_API_URL=https://api.connorlove.com
+EMAIL=LoveConnor2005@gmail.com
+PASSWORD=Cando145!
