--- a/package.json
+++ b/package.json
@@ -36,7 +36,13 @@
     "stylelint-config-standard": "^26.0.0"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
+    "@superfaceai/one-sdk": "^2.4.2",
+    "body-parser": "^1.20.2",
     "build": "^0.1.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "framer-motion": "^7.1.0",
     "mdx-bundler": "^9.0.1",
     "next": "^12.2.5",
@@ -50,8 +56,7 @@
   },
   "scripts": {
     "dev": "next dev",
-   "build": "next build", 
-
+    "build": "next build",
     "build:storybook": "build-storybook -o build-storybook && node scripts/draco-storybook",
     "deploy": "aws s3 sync --delete build/ s3://hamish-portfolio-site",
     "deploy:storybook": "aws s3 sync --delete build-storybook s3://hamish-portfolio-storybook",
