--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "framer-motion": "^7.1.0",
     "mdx-bundler": "^9.0.1",
     "next": "^12.2.5",
-    "nodemailer": "^6.9.3",
+    "nodemailer": "^6.9.4",
+    "nodemailer-smtp-transport": "^2.7.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-input-range": "^1.3.0",
