--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Hamish Williams",
-  "name": "Design Portfolio of Hamish Williams",
+  "short_name": "Connor Love",
+  "name": "Design Portfolio of Connor Love",
   "icons": [
     {
       "src": "favicon.png",
